add <p> into html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello Noey</h1>
+    <p>I am learning about how to use basic git version control</p>
     <script>
         console.log("hello noey")
         console.log("hello noey")
