--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello Noey</h1>
+    <h1>Hello Noey</h1>
     <p>I am learning about how to use basic git version control</p>
     <p>123456789</p>
     <script>
